--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,10 @@ img {
     object-fit: cover;
 }
 
+.active {
+    color: #FF0000;
+}
+
 .container {
     max-width: 1216px;
     margin: 0 auto;
@@ -33,7 +37,7 @@ img {
     margin: 0 auto;
 }
 
-.container-sixteenk{
+.container-sixteenk {
     width: 100%;
     margin: 0 auto;
 }
@@ -75,7 +79,7 @@ header .right {
 
 header .right a {
     border: 1px solid #fff;
-    padding:13px 16px;
+    padding: 13px 16px;
     font-size: 14px;
 }
 
@@ -123,7 +127,7 @@ section.home .container-home a {
     font-size: 18px;
 }
 
-section.home .container-home a:hover{
+section.home .container-home a:hover {
     color: #FFf;
     border: 1px solid #FFf;
     background: transparent;
@@ -143,14 +147,14 @@ section.logo-slider .swiper {
     width: 100%;
 }
 
-.parent{
+.parent {
     display: flex;
     align-items: center;
 }
 
 section.logo-slider .swiper-slide img {
     display: block;
-    width: 100%;
+    /* width: 100%; */
     object-fit: cover;
 }
 
@@ -160,7 +164,6 @@ section.logo-slider .swiper-slide img {
 
 section.news {
     padding-top: 66px;
-    /* position: relative; */
 }
 
 section.news .heading {
@@ -171,14 +174,14 @@ section.news .heading {
 
 section.news .news-pagination {
     position: relative;
-  right: 55px;
+    right: 55px;
 }
 
-section.news .news-prev{
+section.news .news-prev {
     color: #fff;
-   background-color: #FF0000;
-   padding: 18px 23px;
-   font-weight: 700;
+    background-color: #FF0000;
+    padding: 18px 23px;
+    font-weight: 700;
 }
 
 section.news .news-prev:after {
@@ -186,8 +189,8 @@ section.news .news-prev:after {
     display: none;
 }
 
-section.news .news-next{
-     color: #fff;
+section.news .news-next {
+    color: #fff;
     background-color: #FF0000;
     padding: 18px 23px;
     font-weight: 700;
@@ -205,7 +208,7 @@ section.news .heading h2 {
 
 section.news .card-content {
     background: #000;
-    padding: 25px 30px;
+    padding: 25px 55px 27px 30px;
 }
 
 section.news .card-content h2 {
@@ -213,9 +216,9 @@ section.news .card-content h2 {
 }
 
 section.news .card-content p {
-    padding-top: 10px;
+    margin-top: 10px;
     font-family: sans-serif;
-    padding-bottom: 30px;
+    margin-bottom: 28px;
     font-size: 16px;
     line-height: 19.6px;
 }
@@ -284,81 +287,257 @@ section.success .row .left .bottom {
     padding-left: 79px;
 }
 
-section.success .row .left .bottom svg{
+section.success .row .left .bottom svg {
     display: block;
     margin: auto;
     height: 100%;
     width: 100%;
 }
 
-section.success .row .middle{
+section.success .row .middle {
     width: 338px;
 }
 
-section.success .row .middle img{
+section.success .row .middle img {
     width: 100%;
-    /* height: 100%; */
+    height: 100%;
     filter: grayscale(1);
     max-height: 858px;
 }
 
-section.success .row .right{
+section.success .row .right {
     width: 495px;
 }
 
-section.success .row .right .top{
+section.success .row .right .top {
     background-color: #FF0000;
     padding: 7px 109px 20px 90px;
 
 }
 
-section.success .row .right .top svg{
+section.success .row .right .top svg {
     height: 100%;
     width: 100%;
     display: block;
     margin: auto;
 }
 
-section.success .row .right .top h2{
+section.success .row .right .top h2 {
     font-size: 32px;
     text-align: center;
     padding-top: 20px;
 }
 
-section.success .row .right .bottom{
+section.success .row .right .bottom {
     background-color: #000;
     padding: 47px 67px 47px 64px;
 }
 
-section.success .row .right .bottom h2{
+section.success .row .right .bottom h2 {
     line-height: 55px;
     font-size: 55px;
 }
 
 /* sectin success end */
 /* ........................... */
+/* section next start */
+
+section.next{
+    background: #000;
+    margin-top: 150px;
+    padding-bottom: 45px;
+}
+
+section.next .row{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding-top: 75px;
+}
+
+section.next .row .left h4{ 
+    font-size: 14px;
+    font-family: sans-serif;
+    font-weight: 500;
+    padding-top: 10px;
+    padding-bottom: 15px;
+}
+section.next .row .left h2{
+    font-size: 50px;
+}
+
+section.next .row .left p{
+    font-size: 14px;
+    font-family: sans-serif;
+    font-weight: 500;
+}
+
+section.next .row .left p.red{
+    font-size: 14px;
+    font-family: sans-serif;
+    font-weight: 500;
+    color: #FF0000;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+section.next .row .right{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
+}
+
+section.next .row .right .rleft {
+    background: #fff;
+    padding: 50px;
+}
+
+section.next .row .right .rleft img{
+    padding: 0px;
+    display: block;
+    margin: auto;
+    width: 100%;
+}
+
+section.next .row .right .rmiddle {
+    text-align: center;
+}
+
+section.next .row .right .rmiddle h2{
+    font-size: 40px;
+    color: #FF0000;
+}
+
+section.next .row .right .rright {
+    background: #fff;
+    padding: 70px 54px;
+}
+
+section.next .row .right .rright img{
+    padding: 0px;
+    display: block;
+    margin: auto;
+    width: 100%;
+}
+
+section.next .container h2{
+    font-size: 22px;
+}
+
+section.next .row2{
+    display: grid;
+    grid-template-columns: 5% 15% 20% 20% 20% 20%;
+    padding-top: 30px;
+    align-items: center;
+    opacity: 20%;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #fff;
+}
+
+section.next .row3{
+    display: grid;
+    grid-template-columns: 5% 15% 20% 20% 20% 20%;
+    padding-top: 30px;
+    align-items: center;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #fff;
+}
+
+section.next .row2 .one h2{
+    font-size: 22px;
+}
+
+section.next .row2 .two p{
+    font-size: 14px;
+    font-family: sans-serif;
+    font-weight: 500;
+}
+
+section.next .row2 .three p{
+    font-size: 14px;
+    font-family: sans-serif;
+    font-weight: 500;
+    text-align: end;
+}
+
+section.next .row2 .four{
+   display: flex;
+   justify-content: right;
+}
+
+section.next .row2 .five p{
+    font-size: 14px;
+    font-family: sans-serif;
+    font-weight: 500;
+    text-align: end;
+}
+
+section.next .row2 .six{
+    display: flex;
+    gap: 40px;
+    justify-content: right;
+ }
+
+ 
+section.next .row3 .one h2{
+    font-size: 22px;
+}
+
+section.next .row3 .two p{
+    font-size: 14px;
+    font-family: sans-serif;
+    font-weight: 500;
+}
+
+section.next .row3 .three p{
+    font-size: 14px;
+    font-family: sans-serif;
+    font-weight: 500;
+    text-align: end;
+}
+
+section.next .row3 .four{
+   display: flex;
+   justify-content: right;
+}
+
+section.next .row3 .five p{
+    font-size: 14px;
+    font-family: sans-serif;
+    font-weight: 500;
+    text-align: center;
+}
+
+section.next .row3 .six{
+    display: flex;
+    gap: 40px;
+    justify-content: right;
+ }
+
+/* section next end */
+/* ........................... */
 /* section rated start */
 
-section.rated{
+section.rated {
     padding: 150px 0;
 }
 
-section.rated .row{
+section.rated .row {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 33px;
 }
 
-section.rated .row .left img{
+section.rated .row .left img {
     width: 100%;
-    height: 100%;
+    height: 566px;
 }
 
-section.rated .row .right{
-    align-self: center;
+section.rated .row .right {
+    padding-top: 118px;
+    padding-bottom: 113px;
 }
 
-section.rated .row .right h2{
+section.rated .row .right h2 {
     font-size: 50px;
     color: #000;
     width: 500px;
@@ -366,13 +545,13 @@ section.rated .row .right h2{
     padding-bottom: 60px;
 }
 
-section.rated .row .right a{
+section.rated .row .right a {
     background-color: #FF0000;
     font-size: 18px;
     padding: 18.5px 20px;
 }
 
-section.rated .row .right a:hover{
+section.rated .row .right a:hover {
     color: #FF0000;
     border: 1px solid #FF0000;
     background: transparent;
@@ -383,19 +562,19 @@ section.rated .row .right a:hover{
 /* ............................. */
 /* section family start */
 
-section.family .row{
+section.family .row {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     background-color: #FF0000;
     position: relative;
 }
 
-section.family .left{
+section.family .left {
     padding: 181px 120px 180px 112px;
     align-self: center;
 }
 
-section.family .left h2{
+section.family .left h2 {
     font-size: 80px;
     line-height: 80px;
 }
@@ -407,13 +586,13 @@ section.family .left .links {
     padding-top: 40px;
 }
 
-section.family .left .links a{
+section.family .left .links a {
     padding: 22px;
     background-color: #fff;
     align-items: center;
 }
 
-section.family .right img{
+section.family .right img {
     width: 100%;
     height: 100%;
     filter: grayscale(1);
@@ -423,17 +602,17 @@ section.family .right img{
 /* ............................... */
 /* footer start */
 
-footer{
+footer {
     background: #000;
     padding-top: 130px;
 }
 
-footer .logo-footer{
+footer .logo-footer {
     display: block;
     margin: auto;
 }
 
-footer .footer-icons{
+footer .footer-icons {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -449,7 +628,7 @@ footer .footer-links ul {
     padding-top: 55px;
 }
 
-footer .footer-links ul li a{
+footer .footer-links ul li a {
     font-size: 14px;
 }
 
@@ -463,7 +642,7 @@ footer .footer-bottom {
     font-size: 16px;
 }
 
-footer .footer-bottom a:hover{
+footer .footer-bottom a:hover {
     color: #FF0000;
     transition: .5s ease all;
 }
